javascript pour couple/personne

--- a/wkkin/config/locales/fr.yml
+++ b/wkkin/config/locales/fr.yml
@@ -187,8 +187,12 @@ fr:
         vousetes: "Vous êtes"
         zodiac: "Signe astro"
         zodiac2: "Signe astro"
-        date_naissance: "Date de naissance"
-        date_naissance2: "Date de naissance"
+        ethnie: "Ethnie"
+        ethnie2: "Ethnie"
+        silhouette: "Silhouette"
+        silhouette2: "Silhouette"
+        date_naissance: "Naissance"
+        date_naissance2: "Naissance"
         mobilites: ""
         disponibilite: "Vos disponibilités"
         bio: "Présentez vous !"
